--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.6.8",
+    "lucide-react": "^0.545.0",
     "next": "13.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
